@@ -30,7 +30,7 @@ arguments to expect:
 3. The command is now available in markup mode, e.g.
 
 
-  \markup { .... \COMMAND #1 argument ... }
+  \\markup { .... \\COMMAND #1 argument ... }
 
 
 BUGS:
@@ -183,7 +183,7 @@ A=1 is right, values in between vary alignment accordingly."
 
 (define-public (left-align-markup paper props . rest)
   (let* ((m (interpret-markup paper props (car rest))))
-    (ly:molecule-align-to! m X RIGHT)
+    (ly:molecule-align-to! m X LEFT)
     m))
 
 (define-public (musicglyph-markup paper props . rest)
@@ -397,7 +397,7 @@ for DIR, you can obtain longer or shorter stems."
 (define-public (override-markup paper props . rest)
   "Tack the 1st arg in REST onto PROPS, e.g.
 
-\override #'(font-family . married) \"bla\"
+\\override #'(font-family . married) \"bla\"
 
 "
   
@@ -441,7 +441,7 @@ for DIR, you can obtain longer or shorter stems."
 
 
 (define-public (strut-markup paper props . rest)
-  "Syntax: \strut
+  "Syntax: \\strut
 
  A box of the same height as the space.
 "
